--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
 
+
+
+
+   CURRENT PRICE ---------> 0.0806
+
+    CURRENT PERCENTAGE--->    -2.0700
+
+    30 DAY HIGHEST THRESHOLD---------------------------------->    0.1117
+
+    30 DAY HIGHER THRESHOLD-------------------------->    0.1070
+
+    30 DAY HIGH THRESHOLD-----------------------> 0.1023
+
+    30 DAY ABOVE AVERAGE ---------------- 0.0975
+
+    30 DAY AVERAGE------> 0.0928
+
+    30 DAY BELOW AVERAGE ---------------- 0.0874
+
+    30 DAY LOW THRESHOLD------------------------> 0.0820
+
+   30 DAY LOWER THRESHOLD-----------------------------> 0.0766
+
+   30 DAY LOWEST THRESHOLD-------------------------------------> 0.0713
+
+        CURRENT DAI AMOUNT IS ------------------>
+        CURRENT USDT AMOUNT IS ------------------>
+          COST is $352.73
+          PROFIT is $-10.59
+          25 PERCENT SELLING THRESHOLD is $88.1825
+         AMOUNT OF COINS YOU HOLD -  4244
