--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
+<html><body><p>
 
 
 
+   CURRENT PRICE ---------> 0.0804
 
-   CURRENT PRICE ---------> 0.0803
-
-    CURRENT PERCENTAGE--->    -2.4300
+    CURRENT PERCENTAGE--->    -2.3100
 
     30 DAY HIGHEST THRESHOLD---------------------------------->    0.1117
 
@@ -30,3 +30,4 @@
           PROFIT is $-11.44
           25 PERCENT SELLING THRESHOLD is $88.1825
          AMOUNT OF COINS YOU HOLD -  4244
+</body></p>
