--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html><body><p>
+<html><body><plaintext>
 
 
 
@@ -30,4 +30,7 @@
           PROFIT is $-9.74
           25 PERCENT SELLING THRESHOLD is $88.1825
          AMOUNT OF COINS YOU HOLD -  4244
-</body></p>
+</plaintext></body>
+
+
+
