--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 
 
 
-   CURRENT PRICE ---------> 0.0793
+   CURRENT PRICE ---------> 0.0797
 
-    CURRENT PERCENTAGE--->    1.6700
+    CURRENT PERCENTAGE--->    2.1800
 
     30 DAY HIGHEST THRESHOLD---------------------------------->    0.1117
 
@@ -27,7 +27,7 @@
         CURRENT DAI AMOUNT IS ------------------>
         CURRENT USDT AMOUNT IS ------------------>
           COST is $706.34
-          PROFIT is $-2.68
+          PROFIT is $+0.87
           25 PERCENT SELLING THRESHOLD is $176.5850
          AMOUNT OF COINS YOU HOLD -  8873
 
