--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 
 
 
-   CURRENT PRICE ---------> 0.0800
+   CURRENT PRICE ---------> 0.0796
 
-    CURRENT PERCENTAGE--->    2.5600
+    CURRENT PERCENTAGE--->    1.9200
 
     30 DAY HIGHEST THRESHOLD---------------------------------->    0.1117
 
@@ -27,7 +27,7 @@
         CURRENT DAI AMOUNT IS ------------------>
         CURRENT USDT AMOUNT IS ------------------>
           COST is $706.34
-          PROFIT is $+3.53
+          PROFIT is $-0.02
           25 PERCENT SELLING THRESHOLD is $176.5850
          AMOUNT OF COINS YOU HOLD -  8873
 
