--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 
 
 
-   CURRENT PRICE ---------> 0.0798
+   CURRENT PRICE ---------> 0.0795
 
-    CURRENT PERCENTAGE--->    1.1400
+    CURRENT PERCENTAGE--->    0.7600
 
     30 DAY HIGHEST THRESHOLD---------------------------------->    0.1117
 
@@ -27,7 +27,7 @@
         CURRENT DAI AMOUNT IS ------------------>
         CURRENT USDT AMOUNT IS ------------------>
           COST is $706.34
-          PROFIT is $+1.75
+          PROFIT is $-0.91
           25 PERCENT SELLING THRESHOLD is $176.5850
          AMOUNT OF COINS YOU HOLD -  8873
 
