--- a/index.html
+++ b/index.html
@@ -1,10 +1,37 @@
+<!-- TradingView Widget BEGIN -->
+<div class="tradingview-widget-container">
+  <div id="tradingview_a0a15"></div>
+  <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/symbols/DOGEUSD/?exchange=BINANCE" rel="noopener" target="_blank"><span class="blue-text">Dogecoin chart</span></a> by TradingView</div>
+  <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
+  <script type="text/javascript">
+  new TradingView.widget(
+  {
+  "autosize": true,
+  "symbol": "BINANCE:DOGEUSD",
+  "interval": "D",
+  "timezone": "America/Los_Angeles",
+  "theme": "light",
+  "style": "3",
+  "locale": "en",
+  "toolbar_bg": "#f1f3f6",
+  "enable_publishing": false,
+  "allow_symbol_change": true,
+  "container_id": "tradingview_a0a15"
+}
+  );
+  </script>
+</div>
+<!-- TradingView Widget END -->
+
+
+
 <html><body><plaintext>
 
 
 
-   CURRENT PRICE ---------> 0.0747
+   CURRENT PRICE ---------> 0.0742
 
-    CURRENT PERCENTAGE--->    -3.7400
+    CURRENT PERCENTAGE--->    -4.2600
 
     30 DAY HIGHEST THRESHOLD---------------------------------->    0.1117
 
@@ -27,7 +54,7 @@
         CURRENT DAI AMOUNT IS ------------------>
         CURRENT USDT AMOUNT IS ------------------>
           COST is $706.34
-          PROFIT is $-43.50
+          PROFIT is $-46.16
           25 PERCENT SELLING THRESHOLD is $176.5850
          AMOUNT OF COINS YOU HOLD -  8873
 
