--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!-- TradingView Widget BEGIN -->
 <div class="tradingview-widget-container">
   <div class="tradingview-widget-container__widget"></div>
-  <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/markets/" rel="noopener" target="_blank"><span class="blue-text">World markets</span></a> by TradingView</div>
+  <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/markets/indices/" rel="noopener" target="_blank"><span class="blue-text">Indices</span></a> by TradingView</div>
   <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-market-overview.js" async>
   {
   "colorTheme": "light",
@@ -33,96 +33,6 @@
         }
       ],
       "originalTitle": "Indices"
-    },
-    {
-      "title": "Futures",
-      "symbols": [
-        {
-          "s": "CME_MINI:ES1!",
-          "d": "S&P 500"
-        },
-        {
-          "s": "CME:6E1!",
-          "d": "Euro"
-        },
-        {
-          "s": "COMEX:GC1!",
-          "d": "Gold"
-        },
-        {
-          "s": "NYMEX:CL1!",
-          "d": "Crude Oil"
-        },
-        {
-          "s": "NYMEX:NG1!",
-          "d": "Natural Gas"
-        },
-        {
-          "s": "CBOT:ZC1!",
-          "d": "Corn"
-        }
-      ],
-      "originalTitle": "Futures"
-    },
-    {
-      "title": "Bonds",
-      "symbols": [
-        {
-          "s": "CME:GE1!",
-          "d": "Eurodollar"
-        },
-        {
-          "s": "CBOT:ZB1!",
-          "d": "T-Bond"
-        },
-        {
-          "s": "CBOT:UB1!",
-          "d": "Ultra T-Bond"
-        },
-        {
-          "s": "EUREX:FGBL1!",
-          "d": "Euro Bund"
-        },
-        {
-          "s": "EUREX:FBTP1!",
-          "d": "Euro BTP"
-        },
-        {
-          "s": "EUREX:FGBM1!",
-          "d": "Euro BOBL"
-        }
-      ],
-      "originalTitle": "Bonds"
-    },
-    {
-      "title": "Forex",
-      "symbols": [
-        {
-          "s": "FX:EURUSD",
-          "d": "EUR/USD"
-        },
-        {
-          "s": "FX:GBPUSD",
-          "d": "GBP/USD"
-        },
-        {
-          "s": "FX:USDJPY",
-          "d": "USD/JPY"
-        },
-        {
-          "s": "FX:USDCHF",
-          "d": "USD/CHF"
-        },
-        {
-          "s": "FX:AUDUSD",
-          "d": "AUD/USD"
-        },
-        {
-          "s": "FX:USDCAD",
-          "d": "USD/CAD"
-        }
-      ],
-      "originalTitle": "Forex"
     }
   ]
 }
@@ -136,9 +46,9 @@
 
 
 
-   CURRENT PRICE ---------> 0.0744
+   CURRENT PRICE ---------> 0.0745
 
-    CURRENT PERCENTAGE--->    -3.5000
+    CURRENT PERCENTAGE--->    -3.3700
 
     30 DAY HIGHEST THRESHOLD---------------------------------->    0.1117
 
@@ -161,7 +71,7 @@
         CURRENT DAI AMOUNT IS ------------------>
         CURRENT USDT AMOUNT IS ------------------>
           COST is $706.34
-          PROFIT is $-44.39
+          PROFIT is $-45.28
           25 PERCENT SELLING THRESHOLD is $176.5850
          AMOUNT OF COINS YOU HOLD -  8873
 
