--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 
 
 
-   CURRENT PRICE ---------> 0.0720
+   CURRENT PRICE ---------> 0.0725
 
-    CURRENT PERCENTAGE--->    -5.3900
+    CURRENT PERCENTAGE--->    -4.6100
 
     30 DAY HIGHEST THRESHOLD---------------------------------->    0.1117
 
@@ -71,9 +71,10 @@
         CURRENT DAI AMOUNT IS ------------------>
         CURRENT USDT AMOUNT IS ------------------>
           COST is $1,177.82
-          PROFIT is $-63.50
+          PROFIT is $-55.76
           25 PERCENT SELLING THRESHOLD is $0.0000
          AMOUNT OF COINS YOU HOLD -  15476
+		MY CURRENT PRICE AVG -  0.0000
 
 
 
