--- a/index.html
+++ b/index.html
@@ -136,17 +136,17 @@ p   {
 <br>
 
 
-<p>30 DAY HIGHEST THRESHOLD -- 40%SELL OFF--<font class=highest>0.1117</font></p>
-<p>30 DAY HIGHER THRESHOLD -- 30%SELL OFF--<font class=higher>0.1066</font></p>
-<p>30 DAY HIGH THRESHOLD -- 20%SELL OFF--<font class=high>0.1015</font></p>
-<p>30 DAY ABOVE AVERAGE -- 10%SELL OFF--<font class= above>0.0964</font></p>
+<p>30 DAY HIGHEST THRESHOLD 40%SELL OFF -<font class=highest>0.1117</font></p>
+<p>30 DAY HIGHER THRESHOLD 30%SELL OFF <font class=higher>0.1066</font></p>
+<p>30 DAY HIGH THRESHOLD 20%SELL OFF <font class=high>0.1015</font></p>
+<p>30 DAY ABOVE AVERAGE 10%SELL OFF <font class= above>0.0964</font></p>
 <hr>
-<p>30 DAY AVERAGE ----- <font class=average>0.0913</font></p>
+<p>30 DAY AVERAGE  <font class=average>0.0913</font></p>
 <hr>
-<p>30 DAY BELOW AVERAGE -- 10%BUY--<font class=below>0.0859</font></p>
-<p>30 DAY LOW THRESHOLD --- 20%BUY--<font class=low>0.0806</font></p>
-<p>30 DAY LOWER THRESHOLD -- 30% BUY--<font class=lower>0.0752</font></p>
-<p>30 DAY LOWEST THRESHOLD -- 40%BUY--<font class=lowest>0.0699</font></p>
+<p>30 DAY BELOW AVERAGE 10%BUY <font class=below>0.0859</font></p>
+<p>30 DAY LOW THRESHOLD 20%BUY <font class=low>0.0806</font></p>
+<p>30 DAY LOWER THRESHOLD 30% BUY <font class=lower>0.0752</font></p>
+<p>30 DAY LOWEST THRESHOLD 40%BUY <font class=lowest>0.0699</font></p>
 <hr>
 
 <br>
