--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ p   {
 <br>
 
 
-<p>30 DAY HIGHEST THRESHOLD 40%SELL OFF -<font class=highest>0.1117</font></p>
+<p>30 DAY HIGHEST THRESHOLD 40%SELL OFF <font class=highest>0.1117</font></p>
 <p>30 DAY HIGHER THRESHOLD 30%SELL OFF <font class=higher>0.1066</font></p>
 <p>30 DAY HIGH THRESHOLD 20%SELL OFF <font class=high>0.1015</font></p>
 <p>30 DAY ABOVE AVERAGE 10%SELL OFF <font class= above>0.0964</font></p>
@@ -150,12 +150,12 @@ p   {
 <hr>
 
 <br>
-<div class=report>CURRENT PRICE is <font color=black>0.0745</font></div>
-<div class=report>CURRENT PERCENTAGE is <font color=black>1.6400</font></div>
-<div class=report>EQUITY is <font color=black>1180.03</font></div>
+<div class=report>CURRENT PRICE is <font color=black>0.0746</font></div>
+<div class=report>CURRENT PERCENTAGE is <font color=black>1.7700</font></div>
+<div class=report>EQUITY is <font color=black>1181.58</font></div>
 <div class=report>YOUR CASH is <font color=black>27.02</font></div>
 <div class=report>COST is - $ <font color=black>1177.82 </font></div>
-<div class=report>PROFIT is - $ <font color=green>-24.81</font></div>
+<div class=report>PROFIT is - $ <font color=green>-23.26</font></div>
 <div class=report>25 PERCENT SELLING THRESHOLD is - $ <font color=black>294.4550</font></div>
 <div class=report>AMOUNT OF COINS YOU HOLD -  <font color=#6495ED>15476</font></div> 
 <div class=report>MY CURRENT PRICE AVG -  <font color=black>0.0761</font></div> 
