--- a/index.html
+++ b/index.html
@@ -93,45 +93,31 @@ p   {
 
 <!-- TradingView Widget BEGIN -->
 <div class="tradingview-widget-container">
-  <div class="tradingview-widget-container__widget"></div>
-  <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/markets/indices/" rel="noopener" target="_blank"><span class="blue-text">Indices</span></a> by TradingView</div>
-  <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-market-overview.js" async>
+  <div id="tradingview_c0a0e"></div>
+  <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/symbols/DOGEUSD/?exchange=BINANCE" rel="noopener" target="_blank"><span class="blue-text">Dogecoin chart</span></a> by TradingView</div>
+  <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
+  <script type="text/javascript">
+  new TradingView.widget(
   {
-  "colorTheme": "light",
-  "dateRange": "1M",
-  "showChart": true,
+  "width": 785,
+  "height": 400,
+  "symbol": "BINANCE:DOGEUSD",
+  "timezone": "America/Los_Angeles",
+  "theme": "light",
+  "style": "3",
   "locale": "en",
-  "largeChartUrl": "",
-  "isTransparent": false,
-  "showSymbolLogo": true,
-  "showFloatingTooltip": false,
-  "width": "400",
-  "height": "660",
-  "plotLineColorGrowing": "rgba(41, 98, 255, 1)",
-  "plotLineColorFalling": "rgba(41, 98, 255, 1)",
-  "gridLineColor": "rgba(240, 243, 250, 0)",
-  "scaleFontColor": "rgba(106, 109, 120, 1)",
-  "belowLineFillColorGrowing": "rgba(41, 98, 255, 0.12)",
-  "belowLineFillColorFalling": "rgba(41, 98, 255, 0.12)",
-  "belowLineFillColorGrowingBottom": "rgba(41, 98, 255, 0)",
-  "belowLineFillColorFallingBottom": "rgba(41, 98, 255, 0)",
-  "symbolActiveColor": "rgba(41, 98, 255, 0.12)",
-  "tabs": [
-    {
-      "title": "Indices",
-      "symbols": [
-        {
-          "s": "BINANCE:DOGEUSD",
-          "d": "DOGE"
-        }
-      ],
-      "originalTitle": "Indices"
-    }
-  ]
+  "toolbar_bg": "#f1f3f6",
+  "enable_publishing": false,
+  "hide_top_toolbar": true,
+  "range": "1M",
+  "save_image": false,
+  "container_id": "tradingview_c0a0e"
 }
+  );
   </script>
 </div>
 <!-- TradingView Widget END -->
+
 <hr>
 <br>
 
@@ -150,12 +136,12 @@ p   {
 <hr>
 
 <br>
-<div class=report>CURRENT PRICE is <font color=black>0.0746</font></div>
+<div class=report>CURRENT PRICE is <font color=black>0.0747</font></div>
 <div class=report>CURRENT PERCENTAGE is <font color=black>1.2200</font></div>
-<div class=report>EQUITY is <font color=black>1181.58</font></div>
+<div class=report>EQUITY is <font color=black>1183.13</font></div>
 <div class=report>YOUR CASH is <font color=black>27.02</font></div>
 <div class=report>COST is - $ <font color=black>1177.82 </font></div>
-<div class=report>PROFIT is - $ <font color=green>-23.26</font></div>
+<div class=report>PROFIT is - $ <font color=green>-21.71</font></div>
 <div class=report>25 PERCENT SELLING THRESHOLD is - $ <font color=black>294.4550</font></div>
 <div class=report>AMOUNT OF COINS YOU HOLD -  <font color=#6495ED>15476</font></div> 
 <div class=report>MY CURRENT PRICE AVG -  <font color=black>0.0761</font></div> 
