--- a/index.html
+++ b/index.html
@@ -82,7 +82,24 @@ p   {
     padding: 2px;
 
 }
+
+    div.negative { color : red; }
+    div.positive { color : green; }
+
 </style>
+
+<script language="JavaScript" type="text/javascript">
+    <!--
+    function MakeNegative() {
+        TDs = document.getElementsByTagName('div');
+        for (var i=0; i<TDs.length; i++) {
+                var temp = TDs[i];
+                if (temp.firstChild.nodeValue.indexOf('-') == 0) temp.className = "negative";
+            }
+    }
+    //-->
+    </script>
+
 </head>
 <body>
 
@@ -139,11 +156,16 @@ p   {
 <div class=report>EQUITY is <font color=black>1166.10</font></div>
 <div class=report>YOUR CASH is <font color=black>27.02</font></div>
 <div class=report>COST is - $ <font color=black>1177.82 </font></div>
-<div class=report>PROFIT is - $ <font color=green>-38.73</font></div>
+<div class=report>PROFIT is - $ <font class="positive negative">-38.73</font></div>
 <div class=report>25% SELL THRESHOLD is - $ <font color=black>294.4550</font></div>
 <div class=report>QTY OF COINS - <font color=#6495ED>15476</font></div> 
 <div class=report>PRICE AVG -  <font color=black>0.0761</font></div> 
 
+    <script language="JavaScript" type="text/javascript">
+  <!--
+   MakeNegative();
+  //-->
+    </script>
 
 </body>
 </html>
