--- a/index.html
+++ b/index.html
@@ -83,15 +83,15 @@ p   {
 
 }
 
-    div.negative { color : red; }
-    div.positive { color : green; }
+    div2.negative { color : red; }
+    div2.positive { color : green; }
 
 </style>
 
 <script language="JavaScript" type="text/javascript">
     <!--
     function MakeNegative() {
-        TDs = document.getElementsByTagName('div');
+        TDs = document.getElementsByTagName('div2');
         for (var i=0; i<TDs.length; i++) {
                 var temp = TDs[i];
                 if (temp.firstChild.nodeValue.indexOf('-') == 0) temp.className = "negative";
@@ -156,7 +156,7 @@ p   {
 <div class=report>EQUITY is <font color=black>1161.46</font></div>
 <div class=report>YOUR CASH is <font color=black>27.02</font></div>
 <div class=report>COST is - $ <font color=black>1177.82 </font></div>
-<div class=report>PROFIT is - $ <font class="positive negative">-43.38</font></div>
+<div class=report>PROFIT is - $ <div2 class="positive negative">-43.38</div2></div>
 <div class=report>25% SELL THRESHOLD is - $ <font color=black>294.4550</font></div>
 <div class=report>QTY OF COINS - <font color=#6495ED>15476</font></div> 
 <div class=report>PRICE AVG -  <font color=black>0.0761</font></div> 
