--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@ p   {
 <div class=report>COST is - $ <font color=black>4083.43 </font></div>
 <div class=report>PROFIT is - $ <div2 class="positive negative">-269.82</div2></div>
 <div class=report>25% SELL THRESHOLD is - $ <font color=black>1020.8575</font></div>
-<div class=report>QTY OF COINS - <font color=#6495ED>59503</font></div> 
-<div class=report>PRICE AVG -  <font color=black>0.0686</font></div> 
+<div class=report>QTY OF COINS - <font color=#6495ED></font></div> 
+<div class=report>PRICE AVG -  <font color=black>0.0000</font></div> 
 
     <script language="JavaScript" type="text/javascript">
   <!--
