--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@ p   {
 <br>
 <div class=report>PRICE is <font color=black>0.06167000</font></div>
 <div class=report>PERCENTAGE is <font color=black>0.5000</font></div>
-<div class=report>EQUITY is <font color=black>3661.7</font></div>
-<div class=report>YOUR CASH is <font color=black>12.92</font></div>
+<div class=report>EQUITY is <font color=black></font></div>
+<div class=report>YOUR CASH is <font color=black></font></div>
 <div class=report>COST is - $ <font color=black>4083.43 </font></div>
 <div class=report>PROFIT is - $ <div2 class="positive negative">-434.65</div2></div>
 <div class=report>25% SELL THRESHOLD is - $ <font color=black>1020.8575</font></div>
