--- a/index.html
+++ b/index.html
@@ -148,15 +148,15 @@ p   {
 <hr>
 
 <br>
-<div class=report>PRICE is <font color=black>0.08997000</font></div>
-<div class=report>PERCENTAGE is <font color=black>-1.7000</font></div>
-<div class=report>EQUITY is <font color=black>3024.15</font></div>
-<div class=report>YOUR CASH is <font color=black>3023.36</font></div>
-<div class=report>COST is - $ <font color=black>0.58     </font></div>
-<div class=report>PROFIT is - $ <div2 class="positive negative">+0.21</div2></div>
-<div class=report>25% SELL THRESHOLD is - $ <font color=black>0.1450</font></div>
-<div class=report>QTY OF COINS - <font color=#6495ED>8</font></div> 
-<div class=report>PRICE AVG -  <font color=black>0.0725</font></div> 
+<div class=report>PRICE is <font color=black>0.09005000</font></div>
+<div class=report>PERCENTAGE is <font color=black>-1.6100</font></div>
+<div class=report>EQUITY is <font color=black></font></div>
+<div class=report>YOUR CASH is <font color=black></font></div>
+<div class=report>COST is - $ <font color=black></font></div>
+<div class=report>PROFIT is - $ <div2 class="positive negative"></div2></div>
+<div class=report>25% SELL THRESHOLD is - $ <font color=black>0.0000</font></div>
+<div class=report>QTY OF COINS - <font color=#6495ED></font></div> 
+<div class=report>PRICE AVG -  <font color=black>0.0000</font></div> 
 
     <script language="JavaScript" type="text/javascript">
   <!--
