--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ p   {
 <br>
 <div class=report>PRICE is <font color=black>0.09253000</font></div>
 <div class=report>PERCENTAGE is <font color=black>-1.8300</font></div>
-<div class=report>EQUITY is <font color=black>3024.19</font></div>
+<div class=report>EQUITY is <font color=black></font></div>
 <div class=report>YOUR CASH is <font color=black>3023.36</font></div>
 <div class=report>COST is - $ <font color=black>0.58     </font></div>
 <div class=report>PROFIT is - $ <div2 class="positive negative">+0.25</div2></div>
